# blogster

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  run.sh
.github/: copilot-instructions.md
src/: app.rs  blossom_client.rs  main.rs  nostr_client.rs  post.rs  relay_settings.rs  storage.rs  theme.rs
src/components/: credentials_dialog.rs  editor.rs  markdown_viewer.rs  mod.rs  publish_dialog.rs  relay_dialog.rs  settings_dialog.rs  sidebar.rs
