[package]
name = "blogster"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Nostr long-form blog poster built with Rust and Egui"
license = "MIT"

[dependencies]
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"
egui_commonmark = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
nostr-sdk = "0.34"
dirs = "5.0"
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"
image = "0.25"
keyring = "3.0"
pulldown-cmark = "0.12"
regex = "1.10"
opener = "0.7"
reqwest = { version = "0.12", features = ["json", "multipart"] }
sha2 = "0.10"
